# vcmi-mlclient

./: CMakeLists.txt  MLClient.cpp  MLClient.h  README.md  main-gui.cpp  main-headless.cpp  main-shared.cpp  main.cpp  main.h  modSettings.json  persistentStorage.json  settings.json
_notes/: ai_creation.txt
configs/: filesystem.json  modSettings.json  settings.json
model_wrappers/: function.cpp  function.h  scripted.cpp  scripted.h  torchpath.cpp  torchpath.h
user_agents/: agent-v1.cpp  agent-v1.h  agent-v10.cpp  agent-v10.h  agent-v11.cpp  agent-v11.h  agent-v12.cpp  agent-v12.h  agent-v13.cpp  agent-v13.h  agent-v3.cpp  agent-v3.h  agent-v4.cpp  agent-v4.h  agent-v5.cpp  agent-v5.h  agent-v6.cpp  agent-v6.h  agent-v7.cpp  agent-v7.h  agent-v8.cpp  agent-v8.h  agent-v9.cpp  agent-v9.h  base.h
